shellclear/src/snapshots/shellclear__engine__test_engine__can_find_custom_patterns.snap
---
source: shellclear/src/engine.rs
assertion_line: 337
expression: result
---
Ok(
    (
        [
            FindingSensitiveCommands {
                shell_type: Bash,
                sensitive_findings: [],
                command: "history",
                data: "history",
                secrets: [],
            },
            FindingSensitiveCommands {
                shell_type: Bash,
                sensitive_findings: [],
                command: "ls",
                data: "ls",
                secrets: [],
            },
            FindingSensitiveCommands {
                shell_type: Bash,
                sensitive_findings: [],
                command: "echo 'hello you'",
                data: "echo 'hello you'",
                secrets: [],
            },
            FindingSensitiveCommands {
                shell_type: Bash,
                sensitive_findings: [],
                command: "rm -f ./file.txt",
                data: "rm -f ./file.txt",
                secrets: [],
            },
            FindingSensitiveCommands {
                shell_type: Bash,
                sensitive_findings: [
                    SensitiveCommands {
                        test: (FIND_ME),
                        name: "Pattern Name",
                        secret_group: 1,
                        id: "elad_ignore",
                    },
                ],
                command: "export FI*****=token",
                data: "export FI*****=token",
                secrets: [
                    "FIND_ME",
                ],
            },
        ],
        [
            FindingSensitiveCommands {
                shell_type: Bash,
                sensitive_findings: [
                    SensitiveCommands {
                        test: (FIND_ME),
                        name: "Pattern Name",
                        secret_group: 1,
                        id: "elad_ignore",
                    },
                ],
                command: "export FI*****=token",
                data: "export FI*****=token",
                secrets: [
                    "FIND_ME",
                ],
            },
        ],
    ),
)
