shellclear/src/snapshots/shellclear__engine__test_engine__can_find_history_commands_line.snap
---
source: shellclear/src/engine.rs
expression: result
---
Ok(
    [
        FindingSensitiveCommands {
            shell_type: Bash,
            sensitive_findings: [],
            command: "history",
        },
        FindingSensitiveCommands {
            shell_type: Bash,
            sensitive_findings: [],
            command: "ls",
        },
        FindingSensitiveCommands {
            shell_type: Bash,
            sensitive_findings: [],
            command: "echo 'hello you'",
        },
        FindingSensitiveCommands {
            shell_type: Bash,
            sensitive_findings: [],
            command: "rm -f ./file.txt",
        },
        FindingSensitiveCommands {
            shell_type: Bash,
            sensitive_findings: [],
            command: "export DELETE_ME=token",
        },
    ],
)
